# mddrag

./: EXTERNAL_DOCS_GUIDE.md  INSTALLATION_GUIDE.md  MCP_INTEGRATION_GUIDE.md  README.md  README2.md  REFACTOR_COMPLETE.md  claude_desktop_config_example.json  claude_desktop_config_final.json  claude_desktop_config_light.json  install.py  manual_clear_libraries_db.py  manual_index_libraries.py  pyproject.toml  requirements.txt  run_server.py  run_server_light.py  run_server_simple.py  run_server_unified.py  tasks.md  test_basic.py  test_chromadb.py  test_external_docs.py  test_final.py  test_godot_docs.py  test_light.py  test_mcp_client.py  test_rag.py
.github/: Claude-instructions.md  copilot-instructions.md  editable-instructions.md
archive/: README.md  run_server_v2.py  server_v2.py
src/documentation_rag/: __init__.py  canvas_parser.py  external_docs_engine.py  rag_engine.py  server.py  server_light.py  server_simple.py  server_unified.py  vaultpicker_bridge.py
